<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:id="@+id/order_information">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="0"
        android:gravity="start"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_rewards_label"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="0"
        android:gravity="end"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_rewards_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="1"
        android:gravity="start"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_shipping_label"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="1"
        android:gravity="end"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_shipping_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="2"
        android:gravity="start"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_tax_label"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="2"
        android:gravity="end"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/order_details_tax_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:textColor="@color/path_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="3"
        android:gravity="start"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/order_details_total_label"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/totalPrice_txt"
        android:textColor="@color/path_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="3"
        android:gravity="end"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/order_details_total_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />
</GridLayout>