<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HERE"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_more_info"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/shipping_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_title_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shipping_lorem_ipsum_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_text"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/returns_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/returns_title_text"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/returns_lorem_ipsum_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_text"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_title_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/more_info_product_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14sp" />

        </LinearLayout>


    </android.support.v4.view.ViewPager>
</RelativeLayout>