<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/oapp_primary_500">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/total_price_header_label"
                android:textColor="@color/oapp_accent_a200"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/totalPrice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/total_price_placeholder"
                android:textColor="@color/white"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/add_option_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/add_option_btn_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <include
            layout="@layout/product_options_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <include
            layout="@layout/rewards_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/buy_sheet_payment_type_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>